Fixed grid elements vertical alignment

--- a/src/Configurator/MediaModal/style.less
+++ b/src/Configurator/MediaModal/style.less
@@ -101,6 +101,7 @@
 				row-gap: @grid-gap;
 				margin: 0 20px;
 				justify-items: center;
+				align-items: start;
 				grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
 
 				.scrollableWithoutScrollbars(y);
